[tool.poetry]
name = "sqlalchemy-filterset]"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
mkdocs-material = {version = "^8.4.3"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
